# CStM

./: .gitignore  CMakeLists.txt  README.md
include/: custom_state_data.h  custom_state_default_handler.h  custom_state_diagram.h  custom_state_enum.h  custom_state_failure.h  custom_state_first_turn_on.h  custom_state_handler.h  custom_state_initial.h  custom_state_on_dark.h  custom_state_on_wet.h  custom_state_transition.h  custom_state_turn_off.h  custom_transition_enum.h  state.h  state_desc.h  state_handler.h  state_machine.h  state_node.h  state_transition.h  transition.h
include/CStM/: state_cfg.h  state_default_handler.h  state_diagram.h  state_handler.h  state_machine.h  state_node.h  state_transition.h  step_state_machine.h  vector_state_machine.h
include/app/: app_cfg.h  app_data.h  app_failure_transition.h  app_inp_outp.h  app_state_failure.h  app_state_init.h  app_state_machine.h  app_state_work.h  app_states_enum.h
include/trace/: dbgprn.h
src/: custom_state_data.c  custom_state_default_handler.c  custom_state_diagram.c  custom_state_failure.c  custom_state_first_turn_on.c  custom_state_handler.c  custom_state_initial.c  custom_state_on_dark.c  custom_state_on_wet.c  custom_state_transition.c  custom_state_turn_off.c  main.c  state.c  state_default_handler.c  state_desc.c  state_handler.c  state_machine.c  state_node.c  state_transition.c  transition.c
src/CStM/: state_default_handler.c  state_handler.c  state_machine.c  state_node.c  state_transition.c  step_state_machine.c  vector_state_machine.c
src/app/: app_data.c  app_failure_transition.c  app_inp_outp.c  app_state_failure.c  app_state_init.c  app_state_machine.c  app_state_work.c  main.c
src/trace/: dbgprn.c
